--- a/Taxis_Amarillos.ipynb
+++ b/Taxis_Amarillos.ipynb
@@ -75,7 +75,7 @@
       "metadata": {
         "id": "y4fjNBwy25g1"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -101,9 +101,12 @@
       "cell_type": "code",
       "source": [
         "#Carga de datos\n",
-        "with open(\"file\", \"r\") as data:\n",
+        "with open(\"yelllow_tripdata_2016-01.parquet\", \"r\") as data:\n",
         "  data_taxis_yellow = json.load(j)\n",
-        "  print(data_taxis_yellow)"
+        "  print(data_taxis_yellow)\n",
+        "\n",
+        "\n",
+        "  table2 = pq.read_table('example.parquet')"
       ],
       "metadata": {
         "id": "GuR87lUN29_j"
